--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <hr/>
         <h3>Some of my projects</h3>
         <h2><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2>
+        <P>Preview :- </P>
         <img src="./assets/images/Screenshot 2024-10-11 152823.png" alt="movie ranking project preview" width="200"/>
         <h2><a href="./public/birthday-invite.html">Birthday Invite Project</a></h2>
+        <P>Preview :- </P>
         <img src="./assets/images/Screenshot 2024-10-11 143630.png" alt="birthday invite project preview" width="200"/>
         <hr/>
 <h3>
